2004-03-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	* NEWS:
	set version to 2.4.19
	released 2.4.18

	* NEWS:
	* fvwm/fvwm2.1:
	updated for 2.4.17

2004-02-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (AnimatedMoveAnyWindow):
	(moveLoop):
	fixed the FlickeringMoveWorkaround option which did nothing before

2003-10-11  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	* NEWS:
	set the version to 2.4.18

2003-10-10  Mikhael Goikhman  <migo@homemail.com>

	* NEWS:
	documented fvwm-menu-headlines changes

	* NEWS:
	* docs/ANNOUNCE:
	* docs/fvwm.lsm.in:
	* fvwm/fvwm2.1:
	prepare for 2.4.17

2003-09-23  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (MoveViewport):
	do not broadcast M_NEW_PAGE if the page did not change

2003-09-03  Mikhael Goikhman  <migo@homemail.com>

	* acinclude.m4:
	fixed error message for incorrect --with-SOMETHING-library argument

2003-07-08  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/placement.c (PlaceWindow):
	StartsOnPage + SkipMapping overrides PPosition

2003-06-30  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/virtual.c (do_move_window_to_desk):
	(UnmapDesk):
	fixed "Visible" condition on non current desks

2003-06-19  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	new configure option --deisable-gtk to disable detection of gtk library

2003-06-17  Dan Espen  <dane@mk.telcordia.com>

	* fvwm/builtins.c (ReadDecorFace): Off by one patch from Anil
	Madhavapeddy.

2003-06-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/Graphics.c:
	define M_PI and M_PI_2 if they are not defined by math.h

2003-05-31  Mikhael Goikhman  <migo@homemail.com>

	* configure.in:
	set the version to 2.4.17

2003-05-30  Mikhael Goikhman  <migo@homemail.com>

	* fvwm/builtins.c:
	* fvwm/fvwm2.1:
	SetEnv with only one parameter is ignored now

	* acinclude.m4:
	cause configure print good usage with autoconf >= 2.53

	* fvwm/fvwm2.1:
	* docs/fvwm.lsm.in:
	* NEWS:
	updated dates for the 2.4.16 release
