@@ -2,6 +2,8 @@
 
 Changes in stable release 2.4.19 (not released yet)
 
+* Fixed BackingStore style option.
+
 -------------------------------------------------------------------
 
 Changes in stable release 2.4.18 (19-Mar-2004)
