@@ -1,3 +1,8 @@
+2004-03-29  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmButtons/FvwmButtons.1:
+	corrected example
+
 2004-01-13  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmScript/Scripts/FvwmScript-Quit:
