@@ -1,3 +1,9 @@
+2004-03-29  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/add_window.c (setup_frame_attributes):
+	fixed BackingStore code and removed now useless backing store for
+	decorations
+
 2004-03-19  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* configure.in:
